test/bad/incompatible-func-params.mac



int foo(int a, int b) {
    return a;
}


int main() {
    return foo();
}